--- a/create_db.ipynb
+++ b/create_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ee491203",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "    f\"카테고리 = {row['category']}\\n\"\n",
     "    f\"간단한설명 = {row['description_kr']}\\n\"\n",
     "    f\"게임설명 = {row['new_description']}\\n\"\n",
+    "    \n",
     ")\n",
     "    chunks = splitter.split_text(text)\n",
     "    for chunk in chunks:\n",
@@ -38,7 +39,8 @@
     "                \"genres\": row['genres'],\n",
     "                \"release_date\": row['release_date'],\n",
     "                \"price\": row['initial_price'],\n",
-    "                \"screenshots\": row['screenshots']   \n",
+    "                \"screenshots\": '|'.join(row['screenshots']) if isinstance(row['screenshots'], list) else row['screenshots']\n",
+    "\n",
     "            }\n",
     "        ))\n",
     "\n"
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f64fab6d",
    "metadata": {},
    "outputs": [],
